--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             /* 画面中央に固定 */
             transform: translateY(-50%) translateX(13px);
             /* 中央配置と右ずらし */
-            background: #13ca5e;
+            background: #00b08d;
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -104,7 +104,7 @@
         }
 
         h1 {
-            background: linear-gradient(135deg, #13ca5e, #0fa958);
+            background: linear-gradient(135deg, #00b08d, #005745);
             color: white;
             padding: 20px;
             border-radius: 0 15px 0px 45px;
@@ -124,7 +124,7 @@
     margin-bottom: 10px;
     padding: 3px;
     font-weight: 600;
-    background-color: #13ca5e;
+    background-color: #00b08d;
     color: white;
     border-radius: 6px;
     font-size: 18px;
@@ -141,7 +141,7 @@
             margin-bottom: 10px;
             padding: 3px;
             font-weight: 600;
-            background-color: #13ca5e;
+            background-color: #00b08d;
             color: white;
             border-radius: 6px;
             font-size: 18px;
@@ -163,12 +163,12 @@
             align-items: center;
             justify-content: center;
             background: white;
-            color: #13ca5e;
+            color: #00b08d;
             font-weight: bold;
             font-size: 0.9em;
             border-radius: 4px;
             padding: 2px 6px;
-            border: 2px solid #13ca5e;
+            border: 2px solid #00b08d;
         }
 
         input[type="text"],
@@ -185,6 +185,7 @@
         }
 
         .visit-buttons,
+        .childsgender-buttons,
         .Caesareansection-buttons,
         .hairmakeup-buttons,
         .kimono-buttons,
@@ -201,6 +202,7 @@
         }
 
         .visit-buttons button,
+        .childsgender-buttons button,
         .Caesareansection-buttons button,
         .hairmakeup-buttons button,
         .kimono-buttons button,
@@ -222,6 +224,7 @@
         }
 
         .visit-buttons button.active,
+        .childsgender-buttons button.active,
         .Caesareansection-buttons button.active,
         .hairmakeup-buttons button.active,
         .kimono-buttons button.active,
@@ -313,7 +316,7 @@
         }
 
         .calendar td.selected {
-            background-color: #13ca5e;
+            background-color: #00b08d;
             color: #fff;
         }
 
@@ -504,6 +507,62 @@
             }
         }
 
+        .info-text {
+            margin-top: 20px;
+            /* 上の余白 */
+            margin-bottom: 10px;
+            /* 下に白い隙間を追加 */
+            font-size: 13px;
+            color: #000000;
+            line-height: 1.5;
+            text-align: center;
+            word-wrap: break-word;
+            background-color: #eef9f5;
+            /* 青っぽい背景色を追加 */
+            padding: 10px;
+            border-radius: 4px;
+        }
+
+        /* 携帯端末向けのレスポンシブデザイン */
+        @media (max-width: 768px) {
+            .info-text {
+                font-size: 11.5px;
+                /* スマホでは少し小さく */
+                margin-top: 10px;
+                /* 上下のマージンを調整 */
+                line-height: 2.0;
+                /* テキストの高さ調整 */
+            }
+        }
+
+.info-textmemo { 
+    margin-top: 20px;
+    margin-bottom: 10px;
+    font-size: 13px;
+    color: #000000;
+    line-height: 1.5;
+    text-align: center;
+    word-wrap: break-word;
+    background-color: #eef9f5;
+    padding: 10px;
+    border-radius: 4px;
+
+    /* 横一杯に広げるための追加 */
+    width: 100%;
+    box-sizing: border-box; /* padding含めて100%に収まるように */
+    display: block;
+}
+
+/* 携帯端末向けのレスポンシブデザイン */
+@media (max-width: 768px) {
+    .info-textmemo {
+        font-size: 11.5px;
+        margin-top: 10px;
+        line-height: 2.0;
+    }
+}
+
+
         .symptoms,
         .options {
             display: block;
@@ -533,7 +592,7 @@
 
         .highlight-background {
             cursor: pointer;
-            background-color: #13ca5e;
+            background-color: #00b08d;
             padding: 10px;
             border-radius: 6px;
             font-size: 18px;
@@ -596,7 +655,7 @@
 
         input:focus,
         textarea:focus {
-            border-color: #13ca5e;
+            border-color: #00b08d;
             outline: none;
             box-shadow: 0 0 8px rgba(0, 123, 255, 0.2);
         }
@@ -605,7 +664,7 @@
             padding: 12px;
             border: none;
             border-radius: 6px;
-            background-color: #13ca5e;
+            background-color: #00b08d;
             color: #000000;
             font-size: 16px;
             cursor: pointer;
@@ -674,7 +733,7 @@
             left: 50%;
             transform: translate(-50%, -10px);
             /* Y方向に上げる */
-            background-color: #13ca5e;
+            background-color: #00b08d;
             color: #fff;
             padding: 3px 12px;
             /* ボックスのパディングを縮小 */
@@ -768,7 +827,7 @@
             /* 内側に3pxのスペースをつける（中身がくっつかないように） */
             font-weight: 600;
             /* 文字を少し太くする（600は太さの目安） */
-            background-color: #13ca5e;
+            background-color: #00b08d;
             /* 背景の色をくすんだ緑にする */
             color: white;
             /* 文字の色を白にする */
@@ -839,23 +898,6 @@
     outline: none;
     background-color: #f9fefc;
 }
-
-        .labelnigyou {
-            display: block;
-            margin-top: 3px;
-            /* ← 追加 */
-            margin-bottom: 10px;
-            padding: 3px;
-            font-weight: 600;
-            background-color: #13ca5e;
-            color: white;
-            border-radius: 6px;
-            font-size: 18px;
-            text-align: center;
-            text-indent: 0px;
-            position: relative;
-            overflow: hidden;
-        }
     </style>
 </head>
 
@@ -869,7 +911,7 @@
     </div>
 
     <div class="container">
-        <h1>すずき写真事務所<br>スタジオ ニューボーンフォト  
+        <h1>すずき写真事務所<br>バースデー/アニバーサリー
         </h1>
         <div class="label">お客様名<span class="required">必須</span></div>
         <input type="text" id="name" placeholder="お名前を入力してください" oninput="saveInput('name')">
@@ -882,14 +924,25 @@
 
         <div class="label">プランをお選びください<span class="required">必須</span></div>
         <div class="visit-buttons">
-            <button type="button" id="firstVisit" onclick="selectVisit(this)">お参り同行プラン 47000円+税</button>
-            <button type="button" id="repeatVisit" onclick="selectVisit(this)">ミニプラン 　37,000円+税</button>
-            <button type="button" id="repeatVisit" onclick="selectVisit(this)">スタンダードプラン 　50,000円+税</button>
-            <button type="button" id="repeatVisit" onclick="selectVisit(this)">プレミアムプラン 　67,000円+税</button>
+            <button type="button" id="firstVisit" onclick="selectVisit(this)">ミニプラン　37,000円+税</button>
+            <button type="button" id="repeatVisit" onclick="selectVisit(this)">スタンダードプラン　47,000円+税</button>
+            <button type="button" id="sanVisit" onclick="selectVisit(this)">プレミアムプラン　57,000円+税</button>
         </div>
 
+            <div class="label">撮影内容<span class="required">必須</span></div>
+            <div class="Freshflowerphotography-buttons">
+                <button type="button" onclick="selectFreshflowerphotography(this)">マタニティ</button>
+                <button type="button" onclick="selectFreshflowerphotography(this)">ハーフバースデイ</button>
+                <button type="button" onclick="selectFreshflowerphotography(this)">1歳バースデイ</button>
+                <button type="button" onclick="selectFreshflowerphotography(this)">2歳バースデイ</button>
+                <button type="button" onclick="selectFreshflowerphotography(this)">入園・入学</button>
+                <button type="button" onclick="selectFreshflowerphotography(this)">成人式</button>
+                <div class="info-textmemo">その他の方は以下にご記入ください</div>
+            <textarea id="ziyuusonota" placeholder="例：山田太郎・3ヶ月・男の子など 複数いれば全員分ご記入ください。"></textarea>
+            </div>
+
         <div class="highlight-background">
-            <div class="kibounitizi">出産予定日 or 出産日<span class="required">必須</span></div>
+            <div class="kibounitizi">お子様のお誕生日（任意）</span></div>
         </div>
 
         <!-- カスタム placeholder 表示用 -->
@@ -898,53 +951,45 @@
             <input type="datetime-local" id="date4" class="datetime-input" placeholder=" " aria-label="タップして日時を入力">
         </div>
 
-            <div class="labelContent">自然分娩 or 帝王切開</div>
+            <div class="label">お子様のお名前（任意）</div>
+            <textarea id="mugwortmainkid" placeholder="お子様のお名前をご記入ください。"></textarea>
+
+            <div class="label">お子様の性別（任意）</div>
+            <div class="childsgender-buttons">
+                <button type="button" onclick="selectchildsgender(this)">男性</button>
+                <button type="button" onclick="selectchildsgender(this)">女性</button>
+            </div>
+
+            <div class="label">ご兄弟のお名前（任意）</div>
+            <textarea id="mugwortsiblinginfo" placeholder="お名前・年齢・性別をご記入ください。"></textarea>
+
+            <div class="label">ご兄弟の性別（任意）</div>
             <div class="Caesareansection-buttons">
-                <button type="button" onclick="selectCaesareansection(this)">自然分娩</button>
-                <button type="button" onclick="selectCaesareansection(this)">帝王切開</button>
+                <button type="button" onclick="selectCaesareansection(this)">男性</button>
+                <button type="button" onclick="selectCaesareansection(this)">女性</button>
             </div>
 
-        <div class="label">お子様のお名前（任意）</div>
-        <input type="text" id="mugwortsiblinginfo" placeholder="お子様のお名前（任意）を入力してください">
+            <div class="label">ご兄弟の年齢（任意）</div>
+            <input type="text" id="mugwortparticipants" placeholder="例：祖母2人、父、母 など">
 
-            <div class="label">お子様の性別<span class="required">必須</span></div>
-            <div class="Freshflowerphotography-buttons">
-                <button type="button" onclick="selectFreshflowerphotography(this)">男</button>
-                <button type="button" onclick="selectFreshflowerphotography(this)">女</button>
-                <button type="button" onclick="selectFreshflowerphotography(this)">わからない</button>
-            </div>
-
-        <div class="label">出生体重（任意）</div>
-        <input type="tel" id="birthweight" placeholder="出生体重を入力してください">
-
-            <div class="labelContent">ご兄弟情報<br>※いらっしゃらない場合は未記入で大丈夫です。（任意）</div>
-            <div class="info-text">ご兄弟のお名前</div>
-            <input type="text" id="mugwortmainkid" placeholder="ご兄弟のお名前をご記入ください">
-            <div class="info-text">ご兄弟の性別</div>
-            <div class="kimono-buttons">
-                <button type="button" onclick="selectkimono(this)">男性</button>
-                <button type="button" onclick="selectkimono(this)">女性</button>
-                <button type="button" onclick="selectkimono(this)">相談したい</button>
-            </div>
-            <div class="info-text">ご兄弟の年齢</div>
-            <input type="tel" id="mugwortparticipants" placeholder="ご兄弟の年齢をご記入ください">
-
-            <div class="labelnigyou">撮影に参加される方の<br>人数と続柄（任意）</div>
+            <div class="label">撮影に参加される方の人数と続柄（任意）</div>
             <input type="text" id="mugwortshrinename" placeholder="撮影に参加される方の人数と続柄をご記入ください">
 
-            <div class="labelnigyou">生花撮影ご希望の有無<br>（スタジオのみ）（任意）</div>
+            <div class="label">生花撮影ご希望の有無<span class="required">必須</span></div>
+            <div class="kimono-buttons">
+                <button type="button" onclick="selectkimono(this)">有り</button>
+                <button type="button" onclick="selectkimono(this)">無し</button>
+                <button type="button" onclick="selectkimono(this)">相談したい</button>
+            </div>
+
+            <div class="label">◎お支度ご希望の有無<span class="required">必須</span></div>
             <div class="hairmakeup-buttons">
                 <button type="button" onclick="selecthairmakeup(this)">有り</button>
                 <button type="button" onclick="selecthairmakeup(this)">無し</button>
                 <button type="button" onclick="selecthairmakeup(this)">相談したい</button>
             </div>
 
-            <div class="label">大人ヘアメイクご希望の有無<span class="required">必須</span></div>
-            <div class="preparationphoto-buttons">
-                <button type="button" onclick="selectpreparationphoto(this)">有り</button>
-                <button type="button" onclick="selectpreparationphoto(this)">無し</button>
-                <button type="button" onclick="selectpreparationphoto(this)">相談したい</button>
-            </div>
+
         
         <div class="highlight-background">
             <div class="kibounitizi">希望日時<span class="required">必須</span></div>
@@ -987,10 +1032,11 @@
         let visitCount = '';
         let hairmakeupCount = '';
         let kimonoCount = '';
-        let CaesareansectionCount = '';
+        let childsgenderCount = '';
         let preparationphotoCount = '';
         let FreshflowerphotographyCount = '';
         let selectedMenu = '';
+        let CaesareansectionCount = '';
         let highschoolCount = '';
         let selectedSymptom = [];  // 配列として定義
         let selectedFullDate = '';
@@ -1438,6 +1484,21 @@ function selectCaesareansection(element) {
 }
 
 // 訪問回数の選択（初回・リピート）
+function selectchildsgender(element) {
+    document.querySelectorAll('.childsgender-buttons button').forEach(btn => btn.classList.remove('active'));
+    element.classList.add('active');
+    childsgenderCount = element.innerText;
+
+    // 選択された訪問回数に対応する時間を取得
+    selectedchildsgenderTime = childsgenderTimes[childsgenderCount];
+
+    console.log('選択された訪問回数の時間:', selectedchildsgenderTime);
+
+    // カレンダーを更新するために取得する日付を渡す
+    fetchAvailability(currentDate);
+}
+
+// 訪問回数の選択（初回・リピート）
 function selectpreparationphoto(element) {
     document.querySelectorAll('.preparationphoto-buttons button').forEach(btn => btn.classList.remove('active'));
     element.classList.add('active');
@@ -1537,19 +1598,20 @@ function selectpreparationphoto(element) {
             selectedFullDate = `${date.getFullYear()}年${('0' + (date.getMonth() + 1)).slice(-2)}月${('0' + date.getDate()).slice(-2)}日 ${selectedTime}`;
 
             // 希望日時を即座に更新
+            updateDisplayInfo();
         }
 
         function submitForm() {
             const formData = {
         name: document.getElementById('name').value.trim(),
         phone: document.getElementById('phone').value.trim(),
-        birthweight: document.getElementById('birthweight').value.trim(),
         mugwortmainkid: document.getElementById('mugwortmainkid').value.trim(),
+        ziyuusonota: document.getElementById('ziyuusonota').value.trim(),
         Yourresidentialaddress: document.getElementById('Yourresidentialaddress').value.trim(),
         mugwortsiblinginfo: document.getElementById('mugwortsiblinginfo').value.trim(),
         mugwortparticipants: document.getElementById('mugwortparticipants').value.trim(),
         mugwortshrinename: document.getElementById('mugwortshrinename').value.trim(),
-        visitCount, hairmakeupCount, kimonoCount, preparationphotoCount, FreshflowerphotographyCount, CaesareansectionCount,
+        visitCount, hairmakeupCount, kimonoCount, preparationphotoCount, FreshflowerphotographyCount, CaesareansectionCount, childsgenderCount,
                 dates: [
                     document.getElementById('date1').value,
                     document.getElementById('date2').value,
@@ -1583,7 +1645,7 @@ function selectpreparationphoto(element) {
             // LINEトークにメッセージを送信
             liff.sendMessages([{
                 type: 'text',
-                text: `【予約フォーム】\n≪スタジオ ニューボーンフォト≫\n\n｟お名前｠\n・${formData.name}\n\n｟ご住所｠\n・${formData.Yourresidentialaddress}\n\n｟電話番号｠\n・${formData.phone}\n\n｟プラン｠\n・${formData.visitCount}\n\n｟出産予定日｠\n・${formatDate(formData.dates[3])}\n\n｟自然分娩 or 帝王切開｠\n・${formData.CaesareansectionCount}\n\n｟お子様のお名前｠\n・${formData.mugwortsiblinginfo}\n\n｟お子様の性別｠\n・${formData.FreshflowerphotographyCount}\n\n｟お子様のお名前｠\n・${formData.birthweight}\n\n｟ご兄弟のお名前｠\n・${formData.mugwortmainkid}\n\n｟ご兄弟の性別｠\n・${formData.kimonoCount}\n\n｟ご兄弟の年齢｠\n・${formData.mugwortparticipants}\n\n｟撮影に参加される方｠\n・${formData.mugwortshrinename}\n\n｟生花撮影｠\n・${formData.hairmakeupCount}\n\n｟大人ヘアメイク｠\n・${formData.preparationphotoCount}\n\n【希望日時】\n｟第一希望日｠\n${formatDate(formData.dates[0])}\n\n｟第二希望日｠\n${formatDate(formData.dates[1])}\n\n｟第三希望日｠\n${formatDate(formData.dates[2])}\n\n｟メッセージ｠\n${formData.message}`
+                text: `【予約フォーム】\n≪バースデーアニバーサリー≫\n\n｟お名前\n・${formData.name}\n\n｟ご住所｠\n・${formData.Yourresidentialaddress}\n\n｟電話番号｠\n・${formData.phone}\n\n｟プラン｠\n・${formData.visitCount}\n\n｟撮影内容｠\n・${formData.FreshflowerphotographyCount}\n${formData.ziyuusonota}\n\n｟お子様のお誕生日｠\n・${formatDate(formData.dates[3])}\n\n｟お子様のお名前｠\n・${formData.mugwortmainkid}\n\n｟お子様の性別｠\n・${formData.childsgenderCount}\n\n｟ご兄弟のお名前｠\n・${formData.mugwortsiblinginfo}\n\n｟ご兄弟の性別｠\n・${formData.CaesareansectionCount}\n\n｟ご兄弟の年齢｠\n・${formData.mugwortparticipants}\n\n｟撮影に参加される方｠\n・${formData.mugwortshrinename}\n\n｟生花撮影｠\n・${formData.kimonoCount}\n\n｟お支度｠\n・${formData.hairmakeupCount}\n\n【希望日時】\n｟第一希望日｠\n${formatDate(formData.dates[0])}\n\n｟第二希望日｠\n${formatDate(formData.dates[1])}\n\n｟第三希望日｠\n${formatDate(formData.dates[2])}\n\n｟メッセージ｠${formData.message}`
             }]).then(() => {
                 alert('当日キャンセルは無いようにお願いいたします。');
                 liff.closeWindow();
