--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         }
 
         h1 {
-            background: linear-gradient(135deg, #00b08d, #005e4b);
+            background: linear-gradient(135deg, #00b08d, #005241);
             color: white;
             padding: 20px;
             border-radius: 0 15px 0px 45px;
@@ -120,8 +120,6 @@
 
         .label {
             display: block;
-            margin-top: 3px;
-            /* ← 追加 */
             margin-bottom: 10px;
             padding: 3px;
             font-weight: 600;
@@ -130,7 +128,9 @@
             border-radius: 6px;
             font-size: 18px;
             text-align: center;
+            /* 中央揃え */
             text-indent: 40px;
+            /* テキストを右に20pxずらす */
             position: relative;
             overflow: hidden;
         }
@@ -197,6 +197,7 @@
         }
 
         .visit-buttons button,
+        .highschool-buttons button,
         .symptoms button,
         .menu-sections button,
         .irradiations button {
@@ -212,6 +213,8 @@
         }
 
         .visit-buttons button.active,
+        .highschool-buttons button.active,
+        .symptoms button.active,
         .menu-sections button.active,
         .irradiations button.active {
             background-color: #444;
@@ -487,63 +490,6 @@
             }
         }
 
-        .info-text {
-            margin-top: 20px;
-            /* 上の余白 */
-            margin-bottom: 10px;
-            /* 下に白い隙間を追加 */
-            font-size: 13px;
-            color: #000000;
-            line-height: 1.5;
-            text-align: center;
-            word-wrap: break-word;
-            background-color: #eef9f5;
-            /* 青っぽい背景色を追加 */
-            padding: 10px;
-            border-radius: 4px;
-        }
-
-        /* 携帯端末向けのレスポンシブデザイン */
-        @media (max-width: 768px) {
-            .info-text {
-                font-size: 11.5px;
-                /* スマホでは少し小さく */
-                margin-top: 10px;
-                /* 上下のマージンを調整 */
-                line-height: 2.0;
-                /* テキストの高さ調整 */
-            }
-        }
-
-        .info-textmemo {
-            margin-top: 20px;
-            margin-bottom: 10px;
-            font-size: 13px;
-            color: #000000;
-            line-height: 1.5;
-            text-align: center;
-            word-wrap: break-word;
-            background-color: #eef9f5;
-            padding: 10px;
-            border-radius: 4px;
-
-            /* 横一杯に広げるための追加 */
-            width: 100%;
-            box-sizing: border-box;
-            /* padding含めて100%に収まるように */
-            display: block;
-        }
-
-        /* 携帯端末向けのレスポンシブデザイン */
-        @media (max-width: 768px) {
-            .info-textmemo {
-                font-size: 11.5px;
-                margin-top: 10px;
-                line-height: 2.0;
-            }
-        }
-
-
         .symptoms,
         .options {
             display: block;
@@ -661,11 +607,11 @@
             width: 100%;
             padding: 15px;
             font-size: 18px;
-            background-color: #00b08d;
+            background-color: #dc3545;
         }
 
         .submit-button:hover {
-            background-color: #00b08d;
+            background-color: #c82333;
         }
 
         @media (max-width: 768px) {
@@ -828,35 +774,6 @@
             /* はみ出た中身を隠す（枠から出ないようにする） */
         }
 
-        .kibounitizinini {
-            display: block;
-            /* ブロック要素として表示。幅いっぱいに広がるよ！ */
-            margin-bottom: 1px;
-            /* 下に10pxのスペースをあける（余白） */
-            padding: 3px;
-            /* 内側に3pxのスペースをつける（中身がくっつかないように） */
-            font-weight: 600;
-            /* 文字を少し太くする（600は太さの目安） */
-            background-color: #00b08d;
-            /* 背景の色をくすんだ緑にする */
-            color: white;
-            /* 文字の色を白にする */
-            border-radius: 6px;
-            /* 角を6pxだけ丸くする（ふんわりした見た目に） */
-            font-size: 20px;
-            /* 文字の大きさを18pxにする（ちょっと大きめ） */
-            text-align: center;
-            /* 文字を中央に揃える */
-            /* ↑ 中央揃えにしています */
-            text-indent: 40px;
-            /* 最初の行だけ、文字を右に20pxずらす */
-            /* ↑ テキストの先頭をちょっと右にずらしてるよ！ */
-            position: relative;
-            /* 子要素を自由に配置できるようにする準備（位置調整） */
-            overflow: hidden;
-            /* はみ出た中身を隠す（枠から出ないようにする） */
-        }
-
         .info-row {
             display: flex;
             justify-content: space-between;
@@ -887,31 +804,6 @@
         .edit-button:hover {
             background-color: #ff4f4f;
         }
-
-        /* time入力欄 */
-        #mugwortreservationtime {
-            width: 100%;
-            /* スマホ画面いっぱいに広げる */
-            padding: 1em;
-            /* タップしやすく内側余白を増やす */
-            font-size: 1rem;
-            /* 入力しやすい文字サイズ */
-            border: 1px solid #ccc;
-            border-radius: 10px;
-            background-color: #fff;
-            box-sizing: border-box;
-            appearance: none;
-            /* iOS Safariで余計なスタイルを消す */
-            -webkit-appearance: none;
-            transition: border-color 0.3s;
-        }
-
-        /* フォーカス時の装飾 */
-        #mugwortreservationtime:focus {
-            border-color: #00a683;
-            outline: none;
-            background-color: #f9fefc;
-        }
     </style>
 </head>
 
@@ -925,7 +817,7 @@
     </div>
 
     <div class="container">
-        <h1>すずき写真事務所<br>出張撮影/その他の撮影
+        <h1>予約フォームのみ<br>衣装レンタル
         </h1>
         <div class="label">お客様名<span class="required">必須</span></div>
         <input type="text" id="name" placeholder="お名前を入力してください" oninput="saveInput('name')">
@@ -935,16 +827,6 @@
 
         <div class="label">電話番号<span class="required">必須</span></div>
         <input type="tel" id="phone" placeholder="電話番号を入力してください" oninput="saveInput('phone')">
-
-        <div class="label">プランをお選びください<span class="required">必須</span></div>
-        <div class="visit-buttons">
-            <button type="button" id="firstVisit" onclick="selectVisit(this)">ロケーション撮影プラン 40,000円+税</button>
-            <button type="button" id="repeatVisit" onclick="selectVisit(this)">日々のくらしプラン 37,000円+税</button>
-            <button type="button" id="sanVisit" onclick="selectVisit(this)">その他の撮影</button>
-        </div>
-
-        <div class="label">撮影内容<span class="required">必須</span></div>
-        <textarea id="Businessaddress" placeholder="撮影内容をご記入ください。"></textarea>
 
         <div class="highlight-background">
             <div class="kibounitizi">希望日時<span class="required">必須</span></div>
@@ -957,7 +839,7 @@
         </div>
 
         <div class="highlight-background">
-            <span class="kibounitizinini">第2希望日《任意》</span>
+            <span class="kibounitizi">第2希望日（任意）</span>
         </div>
 
         <!-- カスタム placeholder 表示用 -->
@@ -967,7 +849,7 @@
         </div>
 
         <div class="highlight-background">
-            <span class="kibounitizinini">第3希望日《任意》</span>
+            <span class="kibounitizi">第3希望日（任意）</span>
         </div>
 
         <!-- カスタム placeholder 表示用 -->
@@ -979,20 +861,12 @@
         <div class="labelContent">メッセージ<br>（質問等お気軽にご記入ください）</div>
         <textarea id="message" rows="4" placeholder="メッセージを入力してください"></textarea>
 
+        <div class="info-text">※予約送信後、キモノカタログが送信されるので<br>お選びいただいてからチャットにてどちらの<br>着物がいいか送信してください。</div>
         <button class="submit-button" onclick="submitForm()" div id="section-message">予約を行う</button>
     </div>
 
     <script src="https://static.line-scdn.net/liff/edge/2.1/sdk.js"></script>
     <script>
-        let visitCount = '';
-        let hairmakeupCount = '';
-        let kimonoCount = '';
-        let preparationphotoCount = '';
-        let BrothersgenderCount = '';
-        let childsgenderCount = '';
-        let FreshflowerphotographyCount = '';
-        let selectedMenu = '';
-        let highschoolCount = '';
         let selectedSymptom = [];  // 配列として定義
         let selectedFullDate = '';
         let currentDate = new Date();
@@ -1070,19 +944,17 @@
             }
         }
 
-        // 訪問回数の選択（初回・リピート）
-        function selectVisit(element) {
-            document.querySelectorAll('.visit-buttons button').forEach(btn => btn.classList.remove('active'));
-            element.classList.add('active');
-            visitCount = element.innerText;
+        // 日付セルのクリックイベントで希望日時を更新
+        document.querySelectorAll('.calendar td').forEach(cell => {
+            cell.addEventListener('click', () => {
+                selectDate(cell);
+                updateDisplayInfo();  // 日付を選択したら即座に表示を更新
+            });
+        });
 
-            // 選択された訪問回数に対応する時間を取得
-            selectedVisitTime = visitTimes[visitCount];
-
-            console.log('選択された訪問回数の時間:', selectedVisitTime);
-
-            // カレンダーを更新するために取得する日付を渡す
-            fetchAvailability(currentDate);
+        function updateTotalAmount() {
+            totalAmount = menuPrice + optionsPrice; // オプションの価格も含める
+            updateDisplayInfo(); // 表示を更新
         }
 
         function selectDate(cell) {
@@ -1114,9 +986,7 @@
             const formData = {
                 name: document.getElementById('name').value.trim(),
                 phone: document.getElementById('phone').value.trim(),
-                Yourresidentialaddress: document.getElementById('Yourresidentialaddress').value.trim(),
-                Businessaddress: document.getElementById('Businessaddress').value.trim(),
-                visitCount,
+        Yourresidentialaddress: document.getElementById('Yourresidentialaddress').value.trim(),
                 dates: [
                     document.getElementById('date1').value,
                     document.getElementById('date2').value,
@@ -1127,7 +997,7 @@
 
             // フォームデータのチェック
             if (!formData.name) {
-                alert('お名前を入力してください');
+                alert('お名前を入力してください。');
                 return;
             }
 
@@ -1137,17 +1007,7 @@
             }
 
             if (!formData.phone) {
-                alert('電話番号を入力してください');
-                return;
-            }
-
-            if (!formData.visitCount) {
-                alert('プランをお選びください');
-                return;
-            }
-
-            if (!formData.Businessaddress) {
-                alert('撮影内容を入力してください');
+                alert('電話番号を入力してください。');
                 return;
             }
 
@@ -1159,7 +1019,7 @@
             // LINEトークにメッセージを送信
             liff.sendMessages([{
                 type: 'text',
-                text: `【予約フォーム】\n≪出張撮影/その他の撮影≫\n\n｟お名前｠\n・${formData.name}\n\n｟ご住所｠\n・${formData.Yourresidentialaddress}\n\n｟電話番号｠\n・${formData.phone}\n\n｟プラン｠\n・${formData.visitCount}\n\n｟撮影内容｠\n・${formData.Businessaddress}\n\n【希望日時】\n｟第一希望日｠\n${formatDate(formData.dates[0])}\n\n｟第二希望日｠\n${formatDate(formData.dates[1])}\n\n｟第三希望日｠\n${formatDate(formData.dates[2])}\n\n｟メッセージ｠\n${formData.message}`
+                text: `【予約フォーム】\n≪衣装レンタル≫\n｟お名前｠\n・${formData.name}\n\n｟ご住所｠\n・${formData.Yourresidentialaddress}\n\n｟電話番号｠\n・${formData.phone}\n\n｟メニュー｠\n・衣装レンタル\n\n【希望日時】\n｟第一希望日｠\n${formatDate(formData.dates[0])}\n\n｟第二希望日｠\n${formatDate(formData.dates[1])}\n\n｟第三希望日｠\n${formatDate(formData.dates[2])}\n\n｟メッセージ｠\n・${formData.message}`
             }]).then(() => {
                 alert('当日キャンセルは無いようにお願いいたします。');
                 liff.closeWindow();
