--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     color: white;
     border-radius: 4px;
     text-align: center;
-    transform: translateX(-1px); /* 左に2pxずらす */
+    transform: translateX(px); /* 左に2pxずらす */
 }
 
         input[type="text"],
