--- a/index.html
+++ b/index.html
@@ -37,17 +37,16 @@
             font-size: 24px;
         }
 
-.label {
-    display: block;
-    margin-bottom: 10px;
-    padding: 10px;
-    font-weight: bold;
-    background-color: #b8d9ae;
-    color: white;
-    border-radius: 4px;
-    text-align: center;
-    transform: translateX(px); /* 左に2pxずらす */
-}
+        .label {
+            display: block;
+            margin-bottom: 10px;
+            padding: 10px;
+            font-weight: bold;
+            background-color: #b8d9ae;
+            color: white;
+            border-radius: 4px;
+            text-align: center;
+        }
 
         input[type="text"],
         input[type="tel"],
@@ -68,6 +67,7 @@
             flex-wrap: wrap;
             gap: 10px;
             margin-bottom: 20px;
+            transform: translateX(-2px); /* 左に2pxずらす */
         }
 
         .visit-buttons button,
