--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             flex-wrap: wrap;
             gap: 10px;
             margin-bottom: 20px;
-            transform: translateX(-1px); /* 左に2pxずらす */
+            transform: translateX(px); /* 左に2pxずらす */
         }
 
         .visit-buttons button,
@@ -598,20 +598,20 @@
     white-space: nowrap;
     min-width: 100%;
     margin: 3px; /* ← ここ追加！隙間できるよ〜 */
-    transform: translateX(-1px); /* 左に2pxずらす */
+    transform: translateX(-21px); /* 左に2pxずらす */
 }
 
 @media (max-width: 600px) {
     .menu-sections button {
         flex-basis: calc(50% - 10px);
-        transform: translateX(-1px); /* 左に2pxずらす */
+        transform: translateX(-2px); /* 左に2pxずらす */
     }
 }
 
 @media (max-width: 400px) {
     .menu-sections button {
         flex-basis: 100%;
-        transform: translateX(-1px); /* 左に2pxずらす */
+        transform: translateX(-2px); /* 左に2pxずらす */
     }
 }
     </style>
